Added adapters tests